# slick

./: .clangd  .clangd_ps3  .gitignore  .gitmodules  .nvim.lua  CMakeLists.txt  CMakePresets.json  README.md  launch.json
3rd/: CMakeLists.txt
samples/: CMakeLists.txt
samples/cpp_sandbox/: CMakeLists.txt  main.cpp  test_ranges.cpp  tests.hpp
samples/graphics_sandbox/: CMakeLists.txt  main.cpp
samples/graphics_sandbox/data/: fragment.glsl  vertex.glsl
samples/graphics_sandbox/src/: main.cpp
scripts/make/: cmake_toolchain_darwin.cmake  cmake_toolchain_ps3.cmake  slk_toolchain.cmake  slk_toolchain_ps3_gcc.cmake
slk/src/core/: base_types.hpp
tools/: CMakeLists.txt
tools/ps3_deploy/: CMakeLists.txt
tools/ps3_deploy/src/: common.h
tools/ps3_deploy/src/ps3_loader/: CMakeLists.txt  main.c
tools/ps3_deploy/src/ps3_uploader/: CMakeLists.txt  main.cpp
